--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <title>Page Title</title>
 </head>
 <body>
+  <div id="player"></div>
+  <div id="computer"></div>
+  <button id="rock"> Rock </button>
+  <button id="paper"> Paper </button>
+  <button id="scissors"> Scissors </button>
+  <div id="text"></div>
+  <div id="winnerText"></div>
   <script src="script.js"></script>
 </body>
 </html>
